--- a/csce242/projects/part 3/characters.html
+++ b/csce242/projects/part 3/characters.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character List - Video Game Character Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
         <h1>Video Game Character</h1>
         <div class="character-list">
             <div class="character-card">
-                <img src="https://place-hold.it/200x200" alt="Character Image">
+                <img src="images/mario.jpg" alt="Character Image">
                 <h3>Character Name</h3>
                 <p>Game: XYZ</p>
                 <a href="character-detail.html">View Details</a>
@@ -35,7 +35,7 @@
     <h1>Video Game Character</h1>
     <div class="character-list">
         <div class="character-card">
-            <img src="https://place-hold.it/200x200" alt="Character Image">
+            <img src="images/sonic.jpg" alt="Character Image">
             <h3>Character Name</h3>
             <p>Game: XYZ</p>
             <a href="character-detail.html">View Details</a>
@@ -47,7 +47,7 @@
 <h1>Video Game Character</h1>
 <div class="character-list">
     <div class="character-card">
-        <img src="https://place-hold.it/200x200" alt="Character Image">
+        <img src="images/link.jpg" alt="Character Image">
         <h3>Character Name</h3>
         <p>Game: XYZ</p>
         <a href="character-detail.html">View Details</a>
