--- a/csce242/projects/part 3/index.html
+++ b/csce242/projects/part 3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Game Character Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,9 +12,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="character-details.html">Characters details</a></li>
+                <li><a href="character-details.html">Character Details</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact us.html">Contact Us</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -23,25 +23,23 @@
         <h1>Welcome to Video Game Character Hub</h1>
         <p>Explore a world of iconic video game characters, their stories, and abilities.</p>
 
+        <h2>Featured Video Games</h2>
         <div class="featured-characters">
-            <h2>Featured Characters</h2>
             <div class="character-card">
-                <img src="images/part 3 4.jpg" alt="Character Image">
+                <img src="images/part 3 2.jpg" alt="Character Image">
+                <p> Super Smash Brothers</p>
             </div>
 
-            <div class="featured-characters">
-                <h2>Featured Characters</h2>
-                <div class="character-card">
-                    <img src="images/part 3 2.jpg" alt="Character Image">
-                </div>
+            <div class="character-card">
+                <img src="images/part 3 3.jpg" alt="Character Image">
+                <p>Tomb Raider</p>
+            </div>
 
-
-                <div class="featured-characters">
-                    <h2>Featured Characters</h2>
-                    <div class="character-card">
-                        <img src="images/part 3 3.jpg" alt="Character Image">
-                    </div>
-            <!-- Add more character as needed -->
+            <div class="character-card">
+                <img src="images/part 3 4.jpg" alt="Character Image">
+                <p> Super Smash Brothers</p>
+            </div>
+            <!-- Add more character cards as needed -->
         </div>
     </section>
 
