--- a/csce242/projects/part 3/character-details.html
+++ b/csce242/projects/part 3/character-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Detail - Video Game Character Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -21,8 +21,8 @@
 
     <section>
         <h1>Character Details</h1>
-        <img src="https://place-hold.it/300x300" alt="Character Image">
-        <p><strong>Game:</strong> XYZ</p>
+        <img src="images/master chief.jpg" alt="Character Image">
+        <p><strong>Game:</strong> Halo</p>
         <p><strong>Description:</strong> This character has an interesting backstory...</p>
         <p><strong>Abilities:</strong> List of abilities here...</p>
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
