added images for assignments

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -34,7 +34,7 @@
                 <!-- Link to Wireframe Page -->
                 <div class="project">
                     <h3>Part 2 - Wireframe</h3>
-                    <img src="https://place-hold.it/200x200" alt=" Wireframe assignment">
+                    <img src="images/wireframe sc.jpg" alt=" Wireframe assignment">
                     <p>Click below to view the wireframe assignment</p>
                     <a href="part 2/index.html">View Wireframe</a>
                 </div>
@@ -45,13 +45,13 @@
                 <!-- Link to Wireframe Page -->
                 <div class="project">
                     <h3>Part 3 - HTML & CSS</h3>
-                    <img src="https://place-hold.it/200x200" alt=" Wireframe assignment">
+                    <img src="images/part 3 sc.jpg" alt=" Wireframe assignment">
                     <p>Click below to view the wireframe assignment in CSS and HTML</p>
                     <a href="part 3/index.html">View Wireframe</a>
                 </div>
              </div>
             </section>
-            </main> 
+        </main> 
 
     <!-- Footer Section -->
     <footer>
