--- a/csce242/index.html
+++ b/csce242/index.html
@@ -65,7 +65,7 @@
                 <!-- Assignment 5 -->
                <div class="assignment">
                 <h3>Assignment 5 - Client Side Content</h3>
-                <img src="https://place-hold.it/200x200" alt=" Assignment 04 Receate CSS">
+                <img src="images/assignment 5 sc.jpg" alt=" Assignment 04 Receate CSS">
                 <p>This assignment focuses on Javascript,css, and htm.</p>
                 <a href="assignments/assignment_05/index.html">View Assignment</a>
             </div>
