--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCE 242 - Projects</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Use the same CSS file -->
+    <link rel="stylesheet" href="../styles.css"> 
 </head>
 <body>
     <!-- Header Section -->
@@ -24,6 +24,7 @@
         <section class="projects">
             <h2>Projects</h2>
             <div class="project-list">
+
                 <!-- Project 1 -->
                 <div class="project">
                     <h3>Part 1 - Initial Topic (PDF)</h3>
@@ -31,31 +32,29 @@
                     <p>This project introduces the chosen topic. The PDF provides a detailed overview of what the project will entail.</p>
                 </div>
 
-                <!-- Link to Wireframe Page -->
+                <!-- Project 2 -->
                 <div class="project">
                     <h3>Part 2 - Wireframe</h3>
-                    <img src="images/wireframe sc.jpg" alt=" Wireframe assignment">
+                    <img src="images/wireframe sc.jpg" alt="Wireframe assignment">
                     <p>Click below to view the wireframe assignment</p>
                     <a href="part 2/index.html">View Wireframe</a>
                 </div>
-                </div>
-             </section>
-         </main> 
 
-                <!-- Link to Wireframe Page -->
+                <!-- Project 3 -->
                 <div class="project">
                     <h3>Part 3 - HTML & CSS</h3>
-                    <img src="images/part 3 sc.jpg" alt=" Wireframe assignment">
+                    <img src="images/part 3 sc.jpg" alt="HTML & CSS assignment">
                     <p>Click below to view the wireframe assignment in CSS and HTML</p>
                     <a href="part 3/index.html">View Wireframe</a>
                 </div>
-             </div>
-            </section>
-        </main> 
+
+            </div> 
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
-      <p>@Mauriceiono.com</p>
+        <p>@Mauriceiono.com</p>
     </footer>
 </body>
-</html>ml
+</html>
