changed the slider

--- a/csce242/assignments/assignment_05/index.html
+++ b/csce242/assignments/assignment_05/index.html
@@ -25,10 +25,8 @@
         <!-- Slider Move Column -->
         <div class="column slider-column">
             <h3>Slider Move</h3>
-            <input type="range" min="0" max="200" value="0" id="slider" class="slider" oninput="moveSquare()">
-            <div class="slider-box">
-                <div id="square" class="slider-content"></div>
-            </div>
+            <input type="range" min="0" max="200" value="0" id="slider" class="slider" oninput="moveBox()">
+            <div class="slider-box" id="slider-box"></div>
         </div>
     </div>
 
