changed some comments

--- a/csce242/projects/part 3/character-details.html
+++ b/csce242/projects/part 3/character-details.html
@@ -23,7 +23,7 @@
         <h1>Character Details</h1>
         <img src="images/master chief.jpg" alt="Character Image">
         <p><strong>Game:</strong> Halo</p>
-        <p><strong>Description:</strong> This character has an interesting backstory...</p>
+        <p><strong>Description:</strong> This character is Master chief</p>
         <p><strong>Abilities:</strong> List of abilities here...</p>
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
     </section>
