--- a/csce242/projects/part 3/characters.html
+++ b/csce242/projects/part 3/characters.html
@@ -25,7 +25,7 @@
             <div class="character-card">
                 <img src="images/mario.jpg" alt="Character Image">
                 <h3>Character Name</h3>
-                <p>Game: XYZ</p>
+                <p>Game: Super Mario</p>
                 <a href="character-detail.html">View Details</a>
             </div>
             <!-- Add more character cards as needed -->
@@ -37,7 +37,7 @@
         <div class="character-card">
             <img src="images/sonic.jpg" alt="Character Image">
             <h3>Character Name</h3>
-            <p>Game: XYZ</p>
+            <p>Game: Sonic the Hedgehog</p>
             <a href="character-detail.html">View Details</a>
         </div>
         <!-- Add more character cards as needed -->
@@ -49,7 +49,7 @@
     <div class="character-card">
         <img src="images/link.jpg" alt="Character Image">
         <h3>Character Name</h3>
-        <p>Game: XYZ</p>
+        <p>Game: Legend of Zelda</p>
         <a href="character-detail.html">View Details</a>
     </div>
     <!-- Add more character as needed -->
