fixed view details link

--- a/csce242/projects/part 3/about.html
+++ b/csce242/projects/part 3/about.html
@@ -21,6 +21,7 @@
 
     <section>
         <h1>About Video Game Character Hub</h1>
+        <img src="images/part 3 2.jpg" alt="Character Image">
         <p>This website is dedicated to providing information on video game characters. Whether you are a casual gamer or a hardcore enthusiast, this platform is here to enhance your knowledge of your favorite characters.</p>
         <p>Created in 2024, Video Game Character Hub aims to become a comprehensive resource for all things related to video game characters.</p>
     </section>
