--- a/csce242/projects/part 3/characters.html
+++ b/csce242/projects/part 3/characters.html
@@ -26,7 +26,7 @@
                 <img src="images/mario.jpg" alt="Character Image">
                 <h3>Character Name</h3>
                 <p>Game: Super Mario</p>
-                <a href="character-detail.html">View Details</a>
+                <a href="character-details.html">View Details</a>
             </div>
             <!-- Add more character cards as needed -->
         </div>
@@ -38,7 +38,7 @@
             <img src="images/sonic.jpg" alt="Character Image">
             <h3>Character Name</h3>
             <p>Game: Sonic the Hedgehog</p>
-            <a href="character-detail.html">View Details</a>
+            <a href="character-details.html">View Details</a>
         </div>
         <!-- Add more character cards as needed -->
     </div>
@@ -50,7 +50,7 @@
         <img src="images/link.jpg" alt="Character Image">
         <h3>Character Name</h3>
         <p>Game: Legend of Zelda</p>
-        <a href="character-detail.html">View Details</a>
+        <a href="character-details.html">View Details</a>
     </div>
     <!-- Add more character as needed -->
 </div>
