changed featured character

--- a/csce242/projects/part 3/index.html
+++ b/csce242/projects/part 3/index.html
@@ -26,8 +26,8 @@
         <h2>Featured Video Games</h2>
         <div class="featured-characters">
             <div class="character-card">
-                <img src="images/part 3 2.jpg" alt="Character Image">
-                <p> Super Smash Brothers</p>
+                <img src="images/sonic.jpg" alt="Character Image">
+                <p> Sonic the Hedgehog</p>
             </div>
 
             <div class="character-card">
