added more to the character details

--- a/csce242/projects/part 3/character-details.html
+++ b/csce242/projects/part 3/character-details.html
@@ -28,6 +28,33 @@
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
     </section>
 
+    <section>
+        <h1>Character Details</h1>
+        <img src="images/mario.jpg" alt="Character Image">
+        <p><strong>Game:</strong> Super Mario</p>
+        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Abilities:</strong> List of abilities here...</p>
+        <p><strong>Trivia:</strong> Fun facts about the character...</p>
+    </section>
+
+    <section>
+        <h1>Character Details</h1>
+        <img src="images/sonic.jpg" alt="Character Image">
+        <p><strong>Game:</strong> Sonic the Hedehog</p>
+        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Abilities:</strong> List of abilities here...</p>
+        <p><strong>Trivia:</strong> Fun facts about the character...</p>
+    </section>
+
+    <section>
+        <h1>Character Details</h1>
+        <img src="images/link.jpg" alt="Character Image">
+        <p><strong>Game:</strong>  Legend of Zelda</p>
+        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Abilities:</strong> List of abilities here...</p>
+        <p><strong>Trivia:</strong> Fun facts about the character...</p>
+    </section>
+
     <footer>
         <p>Video Game Character Hub © 2024</p>
     </footer>
