--- a/csce242/projects/part 3/character-details.html
+++ b/csce242/projects/part 3/character-details.html
@@ -32,7 +32,7 @@
         <h1>Character Details</h1>
         <img src="images/mario.jpg" alt="Character Image">
         <p><strong>Game:</strong> Super Mario</p>
-        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Description:</strong> This character is Mario</p>
         <p><strong>Abilities:</strong> List of abilities here...</p>
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
     </section>
@@ -41,7 +41,7 @@
         <h1>Character Details</h1>
         <img src="images/sonic.jpg" alt="Character Image">
         <p><strong>Game:</strong> Sonic the Hedehog</p>
-        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Description:</strong> This character is Sonic</p>
         <p><strong>Abilities:</strong> List of abilities here...</p>
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
     </section>
@@ -50,7 +50,7 @@
         <h1>Character Details</h1>
         <img src="images/link.jpg" alt="Character Image">
         <p><strong>Game:</strong>  Legend of Zelda</p>
-        <p><strong>Description:</strong> This character is Master chief</p>
+        <p><strong>Description:</strong> This character is Link</p>
         <p><strong>Abilities:</strong> List of abilities here...</p>
         <p><strong>Trivia:</strong> Fun facts about the character...</p>
     </section>
