--- a/csce242/index.html
+++ b/csce242/index.html
@@ -66,11 +66,12 @@
         </div>
     </section>
 </main>
+              
 
                 <!-- Assignment 5 -->
                <div class="assignment">
                 <h3>Assignment 5 - Client Side Content</h3>
-                <img src="images/assignment 5 sc.jpg" alt=" Assignment 04 Receate CSS">
+                <img src="images/assignment 5 sc.jpg" alt=" Assignment 05  javascript">
                 <p>This assignment focuses on Javascript,css, and htm.</p>
                 <a href="assignments/assignment_05/index.html">View Assignment</a>
             </div>
@@ -78,6 +79,16 @@
     </section>
 </main>
      
+     <!-- Assignment 6 --> 
+     <div class="assignment">
+        <h3>Assignment 6 - JavaScript: Conditionals</h3>
+        <img src="images/assignment 5 sc.jpg" alt=" Assignment 06  javascript conditionals">
+        <p>This assignment focuses .</p>
+        <a href="assignments/assignment_06/index.html">View Assignment</a>
+    </div>
+</div>
+</section>
+</main>
 
     <!-- Footer Section -->
     <footer>
