--- a/csce242/exercises/07_js_nav/index.html
+++ b/csce242/exercises/07_js_nav/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Markers</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
           <div></div>
           <div></div>
         </div>
-        <ul id="nav-items" class="columns">
+        <ul id="nav-items" class="columns hidden-small">
           <li><a href="index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Pictures</a></li>
@@ -23,10 +23,25 @@
       </nav>
     </header>
 
-    <main id="main-content" columns">
+    <main id="main-content" class="columns">
+      <div>
+        <h2>Link Clicking</h2>
+        <a id="click-link" href="#">Click Me</a>
+      </div>
+      <div>
+        <h2>Color Colector</h2>
+        <p>
+          <label for="txt-color">Enter Color: </label>
+          <input id="txt-color" type="color">
 
+          <!-- Create a ball, give it the id of ball
+           When you pick a color change the color of the all to match-->
+           <button id="move-down">down</button>
+        </p>
+        <div id="ball"></div>
+      </div>
     </main>
-
+         
     <footer id="main-footer">
       <p>Goodbye</p>
     </footer>
