--- a/csce242/index.html
+++ b/csce242/index.html
@@ -81,11 +81,22 @@
      
      <!-- Assignment 6 --> 
      <div class="assignment">
-        <h3>Assignment 6 - JavaScript: Conditionals</h3>
-        <img src="images/assignment 5 sc.jpg" alt=" Assignment 06  javascript conditionals">
+        <h3>Assignment 6 - JavaScript: buttons,fuction and more</h3>
+        <img src="images/assignment 5 sc.jpg" alt=" Assignment 06  buttons,fuctions and more">
         <p>This assignment focuses .</p>
         <a href="assignments/assignment_06/index.html">View Assignment</a>
     </div>
+</div>
+</section>
+</main>
+
+<!-- Assignment 7 --> 
+<div class="assignment">
+    <h3>Assignment 7 - JavaScript: Conditionals</h3>
+    <img src="images/ass 7.jpg" alt=" Assignment 07  javascript conditionals">
+    <p>This assignment focuses .</p>
+    <a href="assignments/assignment_07/index.html">View Assignment</a>
+</div>
 </div>
 </section>
 </main>
