fixed main page layout

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCE 242</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header Section -->
     <header>
         <h1>CSCE 242</h1>
         <p>By Maurice Hooks</p>
-         <!-- Projects Section -->
-    <section class="projects-link">
-        <h1>Projects</h1>
-        <a href="projects/index.html" class="button-link">View Projects</a>
-    </section>
+        <!-- Projects Section -->
+        <section class="projects-link">
+            <h1>Projects</h1>
+            <a href="projects/index.html" class="button-link">View Website</a> <!-- Changed link text -->
+        </section>
     </header>
 
     <!-- Main Content Section -->
     <main>
         <!-- Introduction -->
         <section class="intro">
-            <p>In this class, we learn how to develop and design webpages using HTML, CSS, and JavaScript. We start with basic functions and expand with each assignment, building skills necessary for our future careers.</p>
+            <p>In this class, we learn how to develop and design webpages using HTML, CSS, and JavaScript...</p>
         </section>
 
         <!-- Assignments Section -->
@@ -32,74 +32,52 @@
                 <!-- Assignment 1 -->
                 <div class="assignment">
                     <h3>Assignment 1 - Basic HTML</h3>
-                    <img src="images/assignment 1 page.png" alt=" Assignment 01 Basic HTML">
-                    <p>This assignment covers the basics of HTML. We learned how to structure a webpage using various HTML tags and elements.</p>
+                    <img src="images/assignment 1 page.png" alt="Assignment 01 Basic HTML">
+                    <p>This assignment covers the basics of HTML...</p>
                     <a href="assignments/assignment 1/index.html">View Assignment</a>
                 </div>
 
                 <!-- Assignment 2 -->
                 <div class="assignment">
                     <h3>Assignment 2 - Basic CSS</h3>
-                    <img src="images/assignment 2 page.png" alt=" Assignment 02 Basic CSS">
-                    <p>This assignment introduces CSS. We learned how to style HTML elements and create a visually appealing webpage layout.</p>
+                    <img src="images/assignment 2 page.png" alt="Assignment 02 Basic CSS">
+                    <p>This assignment introduces CSS...</p>
                     <a href="assignments/assignment 2/index.html">View Assignment</a>
                 </div>
 
                 <!-- Assignment 3 -->
                 <div class="assignment">
                     <h3>Assignment 3 - Page Layout</h3>
-                    <img src="images/assignment 3 page.png" alt=" Assignment 03 PageLayout">
-                    <p>This assignment focuses on page layout techniques using Flexbox. We learned how to arrange content dynamically based on screen size.</p>
+                    <img src="images/assignment 3 page.png" alt="Assignment 03 Page Layout">
+                    <p>This assignment focuses on page layout techniques...</p>
                     <a href="assignments/assignment 03/index.html">View Assignment</a>
                 </div>
-            </div>
-        </section>
-    </main>
 
-               <!-- Assignment 4 -->
-               <div class="assignment">
-                <h3>Assignment 4 - Recreate CSS Page</h3>
-                <img src="images/Screenshot 2024-09-08 184552.png" alt=" Assignment 04 Receate CSS">
-                <p>This assignment focuses on Recreating USC mainpage.</p>
-                <a href="assignments/assignment_04/index.html">View Assignment</a>
-            </div>
-        </div>
-    </section>
-</main>
-              
+                <!-- Assignment 4 -->
+                <div class="assignment">
+                    <h3>Assignment 4 - Recreate CSS Page</h3>
+                    <img src="images/Screenshot 2024-09-08 184552.png" alt="Assignment 04 Recreate CSS">
+                    <p>This assignment focuses on recreating a main page...</p>
+                    <a href="assignments/assignment_04/index.html">View Assignment</a>
+                </div>
 
                 <!-- Assignment 5 -->
-               <div class="assignment">
-                <h3>Assignment 5 - Client Side Content</h3>
-                <img src="images/assignment 5 sc.jpg" alt=" Assignment 05  javascript">
-                <p>This assignment focuses on Javascript,css, and htm.</p>
-                <a href="assignments/assignment_05/index.html">View Assignment</a>
-            </div>
-        </div>
-    </section>
-</main>
-     
-     <!-- Assignment 6 --> 
-     <div class="assignment">
-        <h3>Assignment 6 - JavaScript: buttons,fuction and more</h3>
-        <img src="images/assignment 5 sc.jpg" alt=" Assignment 06  buttons,fuctions and more">
-        <p>This assignment focuses .</p>
-        <a href="assignments/assignment_06/index.html">View Assignment</a>
-    </div>
-</div>
-</section>
-</main>
+                <div class="assignment">
+                    <h3>Assignment 5 - Client Side Content</h3>
+                    <img src="images/assignment 5 sc.jpg" alt="Assignment 05 JavaScript">
+                    <p>This assignment focuses on JavaScript, CSS, and HTML...</p>
+                    <a href="assignments/assignment_05/index.html">View Assignment</a>
+                </div>
 
-<!-- Assignment 7 --> 
-<div class="assignment">
-    <h3>Assignment 7 - JavaScript: Conditionals</h3>
-    <img src="images/ass 7.jpg" alt=" Assignment 07  javascript conditionals">
-    <p>This assignment focuses .</p>
-    <a href="assignments/assignment_07/index.html">View Assignment</a>
-</div>
-</div>
-</section>
-</main>
+                <!-- Assignment 6 -->
+                <div class="assignment">
+                    <h3>Assignment 6 - JavaScript: Buttons, Functions, and More</h3>
+                    <img src="images/ass 7.jpg" alt="Assignment 06 Buttons, Functions and More">
+                    <p>This assignment focuses on JavaScript functionalities...</p>
+                    <a href="assignments/assignment_06/index.html">View Assignment</a>
+                </div>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
