--- a/csce242/assignments/assignment_06/index.html
+++ b/csce242/assignments/assignment_06/index.html
@@ -16,6 +16,16 @@
             <a href="#" id="exercise2-link">Exercise 2</a>
         </nav>
 
+         <!-- Toggle Menu for Small Screens -->
+         <nav class="menu-toggle" id="menu-toggle">
+            <span class="arrow-down">&#9660;</span> 
+        </nav>
+        <div id="menu-items" class="hidden">
+            <a href="#" class="toggle-exercise1">Exercise 1</a> |
+            <a href="#" class="toggle-exercise2">Exercise 2</a>
+        </div>
+
+
         <!-- Color Slider Section -->
         <div id="color-slider-section" class="exercise-section">
             <h3>Color Slider</h3>
