--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -47,11 +47,18 @@
                     <p>Click below to view the wireframe assignment in CSS and HTML</p>
                     <a href="part 3/index.html">View Wireframe</a>
                 </div>
-
             </div> 
-        </section>
-    </main>
 
+               <!-- Project 4 -->
+               <div class="project">
+                <h3>Part 4 - Advanced HTML & CSS</h3>
+                <img src="images/part 3 sc.jpg" alt="Part 4 assignment">
+                <p>Click below to view the advanced wireframe assignment.</p>
+                <a href="part 4/index.html">View Wireframe</a>
+            </div>
+        </div> 
+    </section>
+</main>
     <!-- Footer Section -->
     <footer>
         <p>@Mauriceiono.com</p>
