--- a/csce242/exercises/07_js_nav/index.html
+++ b/csce242/exercises/07_js_nav/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Markers</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -40,8 +40,26 @@
         </p>
         <div id="ball"></div>
       </div>
+      <div>
+        <p>
+          <label for="txt-enter-color">Enter Color: </label>
+          <input type="text" id="txt-enter-color">
+          <button id="btn-show-color">Show</button>
+        </p>
+        <p id="color-message"></p>
+      </div>
+      <div>
+        <h3>Charity</h3>
+        <p>
+          <label for="txt-donations">Donations: </label>
+          <input type="number" id="txt-donations">
+          <span id="error-donation" class="error"></span>
+        </p>
+        <p><button id="btn-donate">Donate</button></p>
+        <section id="funds-thermometer"></section>
+      </div>
     </main>
-         
+
     <footer id="main-footer">
       <p>Goodbye</p>
     </footer>
