updating project 4 assignment

--- a/csce242/projects/part 4/Games.html
+++ b/csce242/projects/part 4/Games.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
@@ -24,26 +24,59 @@
         <div class="game-list">
             <div class="game-card">
                 <h2>Super Mario</h2>
+                <img src="../part 3/images/mario.jpg" alt="Mario">
                 <p>A classic platformer featuring Mario and his adventures in the Mushroom Kingdom.</p>
             </div>
             <div class="game-card">
                 <h2>Halo</h2>
+                <img src="../part 4/images/halo 3.jpg" alt="Master Chief">
                 <p>A sci-fi shooter where you play as Master Chief, fighting to save humanity.</p>
             </div>
             <div class="game-card">
                 <h2>Sonic the Hedgehog</h2>
+                <img src="../part 4/images/sonic frontiers.jpg" alt="Sonic the Hedgehog">
                 <p>Speed through levels as Sonic, battling Dr. Robotnik and saving animals.</p>
             </div>
             <div class="game-card">
                 <h2>The Legend of Zelda</h2>
+                <img src="../part 4/images/breath of wid.jpg" alt="Link">
                 <p>Embark on epic quests as Link, solving puzzles and battling monsters.</p>
             </div>
             <!-- Add more game cards as needed -->
         </div>
     </section>
 
+    <section>
+        <h2>Popular Genres</h2>
+        <ul class="genre-list">
+            <li><strong>Action-Adventure:</strong> Games that combine action with adventure elements.</li>
+            <li><strong>Role-Playing Games (RPGs):</strong> Immerse yourself in a story and develop your character.</li>
+            <li><strong>First-Person Shooters (FPS):</strong> Experience intense shooting action from a first-person perspective.</li>
+            <li><strong>Platformers:</strong> Jump and run through levels, often filled with obstacles.</li>
+            <li><strong>Puzzle:</strong> Solve challenges and puzzles to progress through the game.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Recent Releases</h2>
+        <div class="recent-releases">
+            <div class="release-card">
+                <h3>Tekken 8 </h3>
+                <p>Release Date: 2024</p>
+            </div>
+            <div class="release-card">
+                <h3>The Last of Us Part 2 Remastered</h3>
+                <p>Release Date: 2024</p>
+            </div>
+            <div class="release-card">
+                <h3>Palworld</h3>
+                <p>Release Date: 2024</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
