--- a/csce242/projects/part 4/about.html
+++ b/csce242/projects/part 4/about.html
@@ -12,14 +12,13 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
-   
     <main>
         <section class="about-intro">
             <h1>About Video Game Character Hub</h1>
@@ -27,22 +26,33 @@
         </section>
 
         <section class="mission">
-            <h2>Our Mission</h2>
-            <p>We aim to become a comprehensive resource for all things related to video game characters.</p>
+            <h2>My Mission</h2>
+            <p>My aim to become a comprehensive resource for all things related to video game characters. My goal is to share in-depth profiles, backstories, and trivia that bring these characters to life.</p>
         </section>
 
         <section class="why-video-games">
             <h2>Why Video Games?</h2>
             <ul>
-                <li>To celebrate iconic characters</li>
-                <li>To educate gamers about their favorite heroes</li>
-                <li>To provide a community for fans</li>
+                <li>To celebrate iconic characters who have shaped gaming culture.</li>
+                <li>To educate gamers about their favorite heroes and villains.</li>
+                <li>To provide a community for fans to discuss and share their passion.</li>
             </ul>
+        </section>
+
+        <section class="get-involved">
+            <h2>Get Involved!</h2>
+            <p>If you are a fan of video games and have something to share, I invite you to join our community! You can contribute by:</p>
+            <ul>
+                <li>Submitting character profiles</li>
+                <li>Participating in discussions</li>
+                <li>Sharing your favorite game-related content</li>
+            </ul>
+            <p>Contact us via our <a href="contact us.html">Contact Us</a> page for more details!</p>
         </section>
     </main>
 
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
