--- a/csce242/projects/part 4/characters.html
+++ b/csce242/projects/part 4/characters.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
@@ -20,32 +20,63 @@
     </header>
 
     <section class="centered">
-        <h1>Video Game Characters</h1>
+        <h1>Featured Video Game Characters</h1>
         <div class="character-list">
             <div class="character-card">
                 <img src="../part 3/images/mario.jpg" alt="Mario">
                 <h3>Mario</h3>
                 <p>Game: Super Mario</p>
+                <p>Role: Hero</p>
                 <a href="character-details.html">View Details</a>
             </div>
             <div class="character-card">
                 <img src="../part 3/images/sonic.jpg" alt="Sonic">
                 <h3>Sonic the Hedgehog</h3>
                 <p>Game: Sonic the Hedgehog</p>
+                <p>Role: Hero</p>
                 <a href="character-details.html">View Details</a>
             </div>
             <div class="character-card">
                 <img src="../part 3/images/link.jpg" alt="Link">
                 <h3>Link</h3>
                 <p>Game: Legend of Zelda</p>
+                <p>Role: Hero</p>
                 <a href="character-details.html">View Details</a>
             </div>
             <!-- Add more character cards as needed -->
         </div>
     </section>
 
+    <section>
+        <h2>Popular Character Types</h2>
+        <ul class="character-types">
+            <li><strong>Heroes:</strong> Characters who fight for good and justice.</li>
+            <li><strong>Villains:</strong> Antagonists who create conflict and challenges.</li>
+            <li><strong>Sidekicks:</strong> Support characters who assist the hero.</li>
+            <li><strong>Antiheroes:</strong> Complex characters who may blur the lines between good and evil.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Upcoming Characters</h2>
+        <div class="upcoming-characters">
+            <div class="upcoming-card">
+                <img src="../part 4/images/gta character 2025.jpg" alt="Link">
+                <h3>This character is from the upcoming GTA series games</h3>
+                <p>Coming in: 2025</p>
+                <p>Details: A brief description of the character.</p>
+            </div>
+            <div class="upcoming-card">
+                <img src="../part 4/images/2025 character pt 2.jpg" alt="Link">
+                <h3> This character is from the new upcoming monster hunter game</h3>
+                <p>Coming in: 2025</p>
+                <p>Details: A brief description of the character.</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
