--- a/csce242/projects/part 4/contact us.html
+++ b/csce242/projects/part 4/contact us.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
@@ -35,8 +35,32 @@
         </form>
     </section>
 
+    <section>
+        <h2>Contact Information</h2>
+        <p>If you have any questions or comments, feel free to reach out to us!</p>
+        <ul>
+            <li><strong>Email:</strong> support@videogamecharacterhub.com</li>
+            <li><strong>Phone:</strong> (123) 456-7890</li>
+            <li><strong>Address:</strong> 123 Gaming Lane, Game City, GA 12345</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Feedback</h2>
+        <p>We would love to hear your thoughts on our website and any suggestions you may have!</p>
+        <form action="#" method="post">
+            <label for="feedback-name">Name:</label>
+            <input type="text" id="feedback-name" name="feedback-name" required>
+
+            <label for="feedback">Your Feedback:</label>
+            <textarea id="feedback" name="feedback" required></textarea>
+
+            <button type="submit">Send Feedback</button>
+        </form>
+    </section>
+
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
