--- a/csce242/projects/part 4/character-details.html
+++ b/csce242/projects/part 4/character-details.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
@@ -21,50 +21,46 @@
 
     <section class="character-details">
         <h1>Character Details</h1>
+
         <div class="character-card">
             <img src="../part 3/images/master chief.jpg" alt="Master Chief">
+            <h2>Master Chief</h2>
             <p><strong>Game:</strong> Halo</p>
-            <p><strong>Description:</strong> This character is Master Chief.</p>
-            <p><strong>Abilities:</strong> Super strength, advanced combat skills.</p>
-            <p><strong>Trivia:</strong> Known for his iconic green armor.</p>
+            <p><strong>Description:</strong> A super soldier dedicated to saving humanity.</p>
+            <p><strong>Abilities:</strong> Super strength, advanced combat skills, and tactical intelligence.</p>
+            <p><strong>Trivia:</strong> Known for his iconic green armor and helmet.</p>
         </div>
-    </section>
 
-    <section class="character-details">
-        <h1>Character Details</h1>
         <div class="character-card">
             <img src="../part 3/images/mario.jpg" alt="Mario">
+            <h2>Mario</h2>
             <p><strong>Game:</strong> Super Mario</p>
-            <p><strong>Description:</strong> This character is Mario.</p>
-            <p><strong>Abilities:</strong> List of abilities here...</p>
-            <p><strong>Trivia:</strong> Fun facts about the character...</p>
+            <p><strong>Description:</strong> A plumber who goes on adventures to rescue Princess Peach.</p>
+            <p><strong>Abilities:</strong> Superhuman agility, jumping, and power-ups like Fire Flower.</p>
+            <p><strong>Trivia:</strong> His first appearance was in the 1981 arcade game Donkey Kong.</p>
         </div>
-    </section>
 
-    <section class="character-details">
-        <h1>Character Details</h1>
         <div class="character-card">
             <img src="../part 3/images/sonic.jpg" alt="Sonic">
+            <h2>Sonic the Hedgehog</h2>
             <p><strong>Game:</strong> Sonic the Hedgehog</p>
-            <p><strong>Description:</strong> This character is Sonic.</p>
-            <p><strong>Abilities:</strong> List of abilities here...</p>
-            <p><strong>Trivia:</strong> Fun facts about the character...</p>
+            <p><strong>Description:</strong> A speedy blue hedgehog on a quest to stop Dr. Robotnik.</p>
+            <p><strong>Abilities:</strong> Super speed, agility, and spin attacks.</p>
+            <p><strong>Trivia:</strong> Sonic’s original design was based on a mix of a hedgehog and an armadillo.</p>
         </div>
-    </section>
 
-    <section class="character-details">
-        <h1>Character Details</h1>
         <div class="character-card">
             <img src="../part 3/images/link.jpg" alt="Link">
-            <p><strong>Game:</strong> Legend of Zelda</p>
-            <p><strong>Description:</strong> This character is Link.</p>
-            <p><strong>Abilities:</strong> List of abilities here...</p>
-            <p><strong>Trivia:</strong> Fun facts about the character...</p>
+            <h2>Link</h2>
+            <p><strong>Game:</strong> The Legend of Zelda</p>
+            <p><strong>Description:</strong> A hero tasked with rescuing Princess Zelda and defeating Ganon.</p>
+            <p><strong>Abilities:</strong> Mastery of various weapons, puzzle-solving, and magic.</p>
+            <p><strong>Trivia:</strong> Link is often mistaken for Zelda, but he is the hero of the series.</p>
         </div>
     </section>
 
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
