--- a/csce242/projects/part 4/index.html
+++ b/csce242/projects/part 4/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="characters.html">Characters</a></li>
-                <li><a href="Games.html">Games</a></li>
+                <li><a href="games.html">Games</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
             </ul>
@@ -26,22 +26,52 @@
         <h2>Featured Video Games</h2>
         <div class="featured-characters">
             <div class="character-card">
-                <img src="../part 3/images/sonic.jpg" alt="Sonic the Hedgehog">
-                <p>Sonic the Hedgehog</p>
+                <img src="../part 4/images/sonic frontiers.jpg" alt="Sonic frontiers">
+                <p>Sonic frontiers</p>
             </div>
             <div class="character-card">
-                <img src="../part 3/images/part 3 3.jpg" alt="Tomb Raider">
-                <p>Tomb Raider</p>
+                <img src="../part 4/images/gta 6 frre dowload.jpg" alt="Link">
+                <p>GTA 6</p>
             </div>
             <div class="character-card">
-                <img src="../part 3/images/part 3 2.jpg" alt="Super Smash Brothers">
-                <p>Super Smash Brothers</p>
+                <img src="../part 4/images/halo 3.jpg" alt="Halo 3">
+                <p>Halo 3</p>
             </div>
         </div>
     </section>
 
+    <section>
+        <h2>Popular Characters</h2>
+        <div class="popular-characters">
+            <div class="character-card">
+                <img src="../part 3/images/mario.jpg" alt="Mario">
+                <h3>Mario</h3>
+                <p>Mario, the beloved plumber, has been saving the Mushroom Kingdom for decades.</p>
+            </div>
+            <div class="character-card">
+                <img src="../part 3/images/sonic.jpg" alt="Sonic">
+                <h3>Sonic the Hedgehog</h3>
+                <p>The fastest hedgehog around, Sonic is always ready for action!</p>
+            </div>
+            <div class="character-card">
+                <img src="../part 3/images/link.jpg" alt="Link">
+                <h3>Link</h3>
+                <p>The courageous hero of Hyrule, on a quest to save Princess Zelda.</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Upcoming Games</h2>
+        <ul>
+            <li><strong>Super Mario Bros wonder</strong> - Release Date: 2024</li>
+            <li><strong>Sonic X Shadow Genereations</strong> - Release Date: 2024</li>
+            <li><strong>The Legend of Zelda: Breath of the Wild 2</strong> - Release Date: 2024</li>
+        </ul>
+    </section>
+
     <footer>
-        <p>Video Game Character Hub © 2024</p>
+        <p>Mauriciono © 2024</p>
     </footer>
 </body>
 </html>
