adding assingment part 5

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -51,14 +51,16 @@
 
                <!-- Project 4 -->
                <div class="project">
-                <h3>Part 4 - Advanced HTML & CSS</h3>
+                <h3>Part 5 - final product</h3>
                 <img src="images/part 3 sc.jpg" alt="Part 4 assignment">
-                <p>Click below to view the advanced wireframe assignment.</p>
-                <a href="part 4/index.html">View Wireframe</a>
+                <p>Click below to view the final wireframe assignment.</p>
+                <a href="part 5/index.html">View Wireframe</a>
             </div>
         </div> 
     </section>
 </main>
+
+
     <!-- Footer Section -->
     <footer>
         <p>@Mauriceiono.com</p>
