--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -49,11 +49,11 @@
                 </div>
             </div> 
 
-               <!-- Project 4 -->
+               <!-- Project 5 -->
                <div class="project">
-                <h3>Part 5 - final product</h3>
-                <img src="images/part 3 sc.jpg" alt="Part 4 assignment">
-                <p>Click below to view the final wireframe assignment.</p>
+                <h3>Part 5 - improved website</h3>
+                <img src="images/part 3 sc.jpg" alt="Part 5 assignment">
+                <p>Click below to view the improved wireframe assignment.</p>
                 <a href="part 5/index.html">View Wireframe</a>
             </div>
         </div> 
