--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -49,6 +49,15 @@
                 </div>
             </div> 
 
+              <!-- Project 4 -->
+            <div class="project">
+                <h3>Part 4 - colors and more</h3>
+                <img src="images/part 3 sc.jpg" alt="HTML & CSS assignment">
+                <p>Click below to view the wireframe assignment in CSS and HTML</p>
+                <a href="part 4/index.html">View Wireframe</a>
+            </div>
+        </div> 
+
                <!-- Project 5 -->
                <div class="project">
                 <h3>Part 5 - improved website</h3>
@@ -59,7 +68,6 @@
         </div> 
     </section>
 </main>
-
 
     <!-- Footer Section -->
     <footer>
