--- a/csce242/index.html
+++ b/csce242/index.html
@@ -79,6 +79,16 @@
         </section>
     </main>
 
+               <!-- Assignment 7 -->
+                <div class="assignment">
+                    <h3>Assignment 7 - Javascript: loops</h3>
+                    <img src="images/ass 7.jpg" alt="Assignment 07 loops">
+                    <p>This assignment focuses on loops</p>
+                    <a href="assignments/assignment_07/index.html">View Assignment</a>
+                </div>
+        </section>
+    </main>
+
     <!-- Footer Section -->
     <footer>
       <p>@Mauriceiono.com</p>
