--- a/csce242/projects/part 5/contact us.html
+++ b/csce242/projects/part 5/contact us.html
@@ -39,15 +39,15 @@
         <h2>Contact Information</h2>
         <p>If you have any questions or comments, feel free to reach out to us!</p>
         <ul>
-            <li><strong>Email:</strong> support@videogamecharacterhub.com</li>
-            <li><strong>Phone:</strong> (123) 456-7890</li>
+            <li><strong>Email:</strong> mthooks@email.sc.edu</li>
+            <li><strong>Phone:</strong> (803) 238-6146</li>
             <li><strong>Address:</strong> 123 Gaming Lane, Game City, GA 12345</li>
         </ul>
     </section>
 
     <section>
         <h2>Feedback</h2>
-        <p>We would love to hear your thoughts on our website and any suggestions you may have!</p>
+        <p>I would love to hear your thoughts on our website and any suggestions you may have!</p>
         <form action="#" method="post">
             <label for="feedback-name">Name:</label>
             <input type="text" id="feedback-name" name="feedback-name" required>
