--- a/csce242/index.html
+++ b/csce242/index.html
@@ -82,7 +82,7 @@
                <!-- Assignment 7 -->
                 <div class="assignment">
                     <h3>Assignment 7 - Javascript: loops</h3>
-                    <img src="images/ass 7.jpg" alt="Assignment 07 loops">
+                    <img src="images/Screenshot 2024-09-25 143109.jpg" alt="Assignment 07 loops">
                     <p>This assignment focuses on loops</p>
                     <a href="assignments/assignment_07/index.html">View Assignment</a>
                 </div>
