--- a/csce242/index.html
+++ b/csce242/index.html
@@ -86,6 +86,15 @@
                     <p>This assignment focuses on loops</p>
                     <a href="assignments/assignment_07/index.html">View Assignment</a>
                 </div>
+        </section>  
+
+                    <!-- Assignment 8 -->
+                <div class="assignment">
+                    <h3>Assignment 8 - Javascript: Arrays</h3>
+                    <img src="images/Screenshot 2024-09-25 143109.jpg" alt="Assignment 08 Arrays">
+                    <p>This assignment focuses on loops</p>
+                    <a href="assignments/assignment_08/index.html">View Assignment</a>
+                </div>
         </section>
     </main>
 
