--- a/csce242/assignments/assignment_08/index.html
+++ b/csce242/assignments/assignment_08/index.html
@@ -24,7 +24,13 @@
       Image by <a href="https://www.freepik.com/free-vector/hand-drawn-stickman-collection_20832062.htm#query=stick%20figure%20run&position=46&from_view=search&track=ais&uuid=22e87991-ee06-4dc2-8ea3-464d535e1a63">Freepik</a>
     </section>
   </footer>
-
+  
+ </div>
+        
+        <footer>
+            <p>@mauriciono.com</p>
+        </footer>
+    </div>
   <script src="script.js"></script>
   
 </body>
